add computational indistinguishability

--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -78,7 +78,7 @@ science where possible\footnote{
   \begin{itemize}
     \item the objects of $\cat{L}$ are the types of $L$;
     \item the morphisms $\cat{L}(A, B)$ are the functions of type $A\to B$;
-    \item the identities $1_A$ are the identity functions $\lambda (x: A).x$;
+    \item the identities $1_A$ are the identity functions $A\to A$;
     \item composition of morphisms are the usual function composition.
   \end{itemize}
 
@@ -154,6 +154,6 @@ can be ``pasted'', allowing us to build up complex equalities from simpler ones.
 	diagrams in \Cref{fig:category axioms}.
 \end{ex}
 
-\section{Functors}
+% \section{Functors}
 
 
