--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -78,6 +78,8 @@
 \newcommand{\alg}[1]{{\texttt{#1}}}
 \newcommand{\ideal}[1]{{\overline{#1}}}
 
+\DeclareMathOperator{\ca}{ca}
+
 % theorems
 \theoremstyle{plain}
 \newtheorem{thm}{Theorem}[chapter]
@@ -102,10 +104,11 @@
 \def\>{\rangle}
 \newcommand{\xcong}[1]{\overset{#1}{\cong}}
 \newcommand{\xequiv}[1]{\overset{#1}{\equiv}}
-\def\compind{\xequiv{\text{c}}}
+\def\cind{\xequiv{\text{c}}}
 
 \def\into{\hookrightarrow}
 \def\onto{\twoheadrightarrow}
+\def\from{\leftarrow}
 \newcommand{\xto}[1]{\xrightarrow{#1}}
 
 \DeclareMathOperator{\id}{id}
