--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -431,11 +431,27 @@
 	url = {https://www.scottaaronson.com/papers/pnp.pdf},
 }
 
+@inproceedings{impagliazzo-1995,
+	author = {Impagliazzo, R.},
+	booktitle = {Proceedings of Structure in Complexity Theory. Tenth Annual IEEE
+	             Conference},
+	title = {A personal view of average-case complexity},
+	year = {1995},
+	volume = {},
+	number = {},
+	pages = {134-147},
+	keywords = {Computer science;Drives;Distributed
+	            computing;Cryptography;Complexity theory;Bibliographies},
+	doi = {10.1109/SCT.1995.514853},
+}
 
-
-
-
-
-
-
+@misc{sadeghi-steinerr-2002,
+	author = {Ahmad-Reza Sadeghi and Michael Steiner},
+	title = {Assumptions Related to Discrete Logarithms: Why Subtleties Make a
+	         Real Difference},
+	howpublished = {Cryptology ePrint Archive, Paper 2002/126},
+	year = {2002},
+	note = {\url{https://eprint.iacr.org/2002/126}},
+	url = {https://eprint.iacr.org/2002/126},
+}
 
