--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -45,8 +45,8 @@
 % TODO: abbreviations
 
 \tableofcontents
-\listoftables
-\listoffigures
+% \listoftables
+% \listoffigures
 
 % \chapter*{Abstract}
 % TODO: abstract
@@ -71,7 +71,7 @@
 \input{category-theory}
 
 \appendix
-\chapter{Theory}
+\chapter{Computer Scientific Foundations}
 \input{theory.tex}
 
 \backmatter{}
